<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itbaivietdaluu"
            android:icon="@drawable/ic_pin"
            android:title="@string/baivietdaluu"/>
        <item
            android:id="@+id/itthemgoiy"
            android:icon="@drawable/ic_plus"
            android:title="@string/themgoiy"/>

        <item
            android:id="@+id/itthemthanhphan"
            android:icon="@drawable/ic_playlist_add_black_24dp"
            android:title="@string/themthanhphan"/>


    </group>


    <item android:title="@string/taikhoan">
        <menu>
            <item
                android:id="@+id/itcapnhatthongtin"
                android:icon="@drawable/account"
                android:title="@string/capnhatthongtinadmin" />
            <item
                android:id="@+id/itdangxuat"
                android:icon="@drawable/ic_account_logout"
                android:title="@string/dangxuat"/>

            <item android:id="@+id/itcaidat"
                android:icon="@drawable/ic_cog"
                android:title="@string/caidat"/>
        </menu>
    </item>




</menu>