<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:textSize="18dp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:text="@string/tenthanhphan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/nice_spinnerthanhphan_dialogAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:textSize="18dp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:text="@string/thanhphangoiy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvdanhsachgoiy_dialog_goiy"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/colorTextMain"
        android:textSize="17dp"
        android:text="@string/chongoiy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnThemTP_dialog_goiy"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/them"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_green"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

</LinearLayout>