<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.TaiKhoan.thanhphan.ThemThanhPhanActivity">

    <android.support.v7.widget.Toolbar
        app:titleTextColor="@color/colorWhite"
        android:id="@+id/toolbar_themthanhphan"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:title="@string/themthanhphan">

        <Button
            android:id="@+id/btnthemthanhphan"
            android:layout_margin="5dp"
            android:layout_gravity="right"
            android:textAllCaps="false"
            android:text="@string/them"
            android:background="@drawable/button_border_nobackground"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <TextView
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/loaithanhphan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdoThucAn_ThemTP"
                android:checked="true"
                android:text="@string/thucan"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:text="@string/nuocuong"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RadioGroup>

        <View
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLine"/>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/soluongcanthem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:paddingLeft="10dp"
                android:id="@+id/spnsoluong_themtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/lnlMain_themtp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



        </LinearLayout>

    </LinearLayout>

</LinearLayout>